<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
  	android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">
    
    <TextView android:text="@string/execution_activity_descr"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:textStyle="bold" />
    	
    <LinearLayout 
		android:layout_height="10dip" 
		android:layout_width="match_parent" />
    
    <TextView android:text="@string/parameter_value"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:textStyle="bold" />
    
	<EditText android:id="@+id/parameter" 
        android:maxLines="1" 
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
      	android:ems="25"
        android:layout_height="wrap_content" 
        android:autoText="true"
        android:capitalize="sentences"
        android:scrollHorizontally="true" />
        
	<LinearLayout 
		android:layout_height="10dip" 
		android:layout_width="match_parent" />
    
    <Button android:id="@+id/save"
		android:layout_height="wrap_content" 
		android:layout_width="150dip" 
		android:text="@string/send" 
		android:layout_gravity="right"
		android:drawableLeft="@android:drawable/ic_menu_send" />
        
</LinearLayout>