<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
  	android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">
    
    <TextView android:text="@string/title"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:textStyle="bold" />
    
	<EditText android:id="@+id/title" 
        android:maxLines="1" 
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
      	android:ems="25"
        android:layout_height="wrap_content" 
        android:autoText="true"
        android:capitalize="sentences"
        android:scrollHorizontally="true" />
    
    <TextView android:text="@string/message_body" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:textStyle="bold" />    
    
	<EditText android:id="@+id/body" 
        android:maxLines="1" 
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
      	android:ems="25"
        android:layout_height="wrap_content" 
        android:autoText="true"
        android:capitalize="sentences"
        android:scrollHorizontally="true" />
        
	<LinearLayout 
		android:layout_height="10dip" 
		android:layout_width="match_parent" />
    
    <Button android:id="@+id/save"
		android:layout_height="wrap_content" 
		android:layout_width="150dip" 
		android:text="@string/save" 
		android:layout_gravity="right"
		android:drawableLeft="@android:drawable/ic_menu_save" />
        
	<!--LinearLayout 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:orientation="horizontal">
		
		<Button android:id="@+id/cancel"
			android:text="@string/cancel" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="left" />
	
	</LinearLayout-->
        
</LinearLayout>